
Language files listed under each version were made by the author beside them, and then
modified by me for consistency/bug fixing.

Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8.1
  -  Added language files
     * AviSynth (Ryan Jones)
     * GNU Make (Neil Bird)
     * Oracle 11i support (Simon Redhead)
     * Prolog (Benny Baumann)
     * SciLab (Christophe David)
     * TeraTerm macro language (Boris Maisuradze)
  -  Added support for Escape Regular Expressions (BenBE)
     * Implemented C-style Escapes in PHP (BenBE)
     * Introduced support for \xAB and \007 style Char Escapes in PHP (BenBE)
     * Implemented Variable Highlighting in PHP (BenBE)
     * Implemented Variable Highlighting in Bash (milian)
  -  Fixed a problem with PCRE patterns for Keyword matching sometimes producing
     very large strings, that could not be handled by some versions of PCRE lib,
     causing broken highlighting an Regexp Compile errors (BenBE, milian)
  -  Fixed broken highlighting of bash commands like `dbus-send --dest=org.....`,
     i.e. the dest was highlighted as variable declaration (milian)
  -  Fixed broken highlighting of some symbols in their escaped form (BenBE)
     (<SEMI> and <PIPE> were accidentially filtered even though they are valid)
  -  Fixed a "memory leak" in the *_regexp_caches (milian)
  -  Fixed broken Escape chars if classes were disabled
  -  start_line_numbers_at() was ignored when GESHI_HEADER_PRE_TABLE was set (revulo)
  -  Fixed a problem allowing Remote Code Inclusion under certain circumstances (BenBE)
  -  Changes to default CSS in order to make the GESHI_HEADER_PRE_TABLE align properly,
     even on Windows / Mac systems with strange fonts (milian, revulo, ^RT)
  -  Minor style changes to the following languages:
     * cpp-qt (milian)
     * MySQL (BenBE)
     * PHP (BenBE)